feat(): Melhorias no projeto

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,13 @@ dependencies {
 	implementation("software.amazon.awssdk:cloudwatch:2.20.110")
 	implementation 'software.amazon.awssdk:cloudwatchlogs:2.30.38'
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+
+	// implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
