--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,28 @@ spring:
       uri: mongodb://localhost:27017/cepdb
   application:
     name: zip-tracker
+resilience4j:
+  retry:
+    instances:
+      cepRetry:
+        max-attempts: 2
+        wait-duration: 500ms
+  circuitbreaker:
+    instances:
+      cepCircuit:
+        register-health-indicator: true
+        sliding-window-type: COUNT_BASED
+        sliding-window-size: 10
+        minimum-number-of-calls: 5
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 10s
+cep:
+  service:
+    url: http://localhost:8081
+
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 2000
+        readTimeout: 3000
